--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>CV Viviana Vargas A.</title>
-	<link href="assets/CSS/bootstrap.min.css" rel="stylesheet">
-	<link href="assets/CSS/styles.css" rel="stylesheet">
+	<link href="./assets/CSS/bootstrap.min.css" rel="stylesheet">
+	<link href="./assets/CSS/styles.css" rel="stylesheet">
 
 </head>
 
@@ -14,7 +14,8 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Viviana Vargas</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-FOTO rounded-circle mx-auto mb-2" src="assets/CSS/FOTO.JPG" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-FOTO rounded-circle mx-auto mb-2" src="./assets/CSS/FOTO.JPG" alt="..." /></span>
+               
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
