--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>CV Viviana Vargas A.</title>
-	<link href="./assets/CSS/bootstrap.min.css" rel="stylesheet">
-	<link href="./assets/CSS/styles.css" rel="stylesheet">
+	<link href="assets/CSS/bootstrap.min.css" rel="stylesheet">
+	<link href="assets/CSS/styles.css" rel="stylesheet">
 
 </head>
 
